# django-tutorial

./: .gitignore  README.md  db.sqlite3  requirements.txt
django-polls/: MANIFEST.in  setup.cfg  setup.py
django-polls/django_polls/: admin.py  urls.py
django-polls/django_polls/migrations/: 0001_initial.py
django-polls/docs/: docs.txt
djangoProjectTutorial/: settings.py  urls.py
polls/: models.py  tests.py  urls.py  views.py
static/admin/js/: autocomplete.js  change_form.js  inlines.js  popup_response.js
static/css/: style.css
staticfiles/admin/js/: filters.js  nav_sidebar.js  prepopulate_init.js
staticfiles/css/: style.css
templates/: index.html
templates/admin/: base_site.html
templates/polls/: index.html
